name:                vlsi-verification
version:             0.1.0.0
synopsis:            Verilog synthesis, test and optimization librarydescription:         Please see README.md
homepage:            https://github.com/wuerges/vlsi_verification
license:             BSD3
license-file:        LICENSE
author:              Emilio Wuerges
maintainer:          wuerges@gmail.com
copyright:           BSD3
category:            EDA
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , VerParser  
                     , Kuelmann97 
                     , Equivalence
                     , Verilog    
                     , Graph      
                     , Algo       
                     , BDD        

  build-depends:       base
                     , parallel
                     , fgl
                     , containers
                     , mtl
                     , fgl-visualize
                     , parsec
                     , setenv
                     , random
                     , time
                     , transformers
  default-language:    Haskell2010


test-suite integration-tests
  type: exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is: TestSuite.hs
  build-depends:       base
                     , vlsi-verification
                     , HUnit
                     , time
                     , mtl
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

-- Benchmark bench-simulation
--   type: exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is: TestSimulation.hs
--   build-depends:       base
--                      , vlsi-verification
--                      , HUnit
--                      , time
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

-- Benchmark bench-kuelmann
--  type: exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is: TestKuelmann97.hs
--  build-depends:       base
--                     , vlsi-verification
--                     , HUnit
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--  default-language:    Haskell2010

executable gen-test-harness
  hs-source-dirs:      app
  main-is:             GenTestHarness.hs
  build-depends:       base
                     , vlsi-verification
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


executable test-equiv
  hs-source-dirs:      app
  main-is:             TestEquiv.hs
  build-depends:       base
                     , vlsi-verification
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable test-parser
  hs-source-dirs:      app
  main-is:             TestParser.hs
  build-depends:       base
                     , vlsi-verification
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
